# rand_date_bot

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
bot/: config.py  main.py  states.py
bot/db/: __init__.py  base.py  models.py  repository.py
bot/handlers/: __init__.py  register.py
bot/handlers/admin/: __init__.py  admins.py  dates.py
bot/handlers/user/: __init__.py  dates.py  history.py  start.py
bot/keyboards/: __init__.py  admin.py  user.py
bot/middlewares/: __init__.py  admin.py  database.py
bot/services/: __init__.py  date_service.py  user_service.py
docs/: Ai.md  Architecture.md  CONTRIBUTING.md  DESIGN.md
