[project]
name = "rand-date-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.26.0",
    "loguru>=0.7.3",
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.7",
    "sqlalchemy>=2.0.48",
    "wemake-python-styleguide>=1.6.1",
]
